# willow

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  extension.toml
.claude/: settings.local.json
.github/workflows/: release.yml
benches/: cache_performance.rs  pattern_matching.rs
docs/: design.md  guide.md  testing-guide.md
examples/: example.c  example.cpp  example.cs  example.ex  example.go  example.hs  example.java  example.js  example.json5  example.kt  example.php  example.py  example.rb  example.rs  example.sh  example.swift  example.toml  example.ts  example.yaml
languages/bash-injections/: config.toml
languages/c-injections/: config.toml
languages/c_sharp-injections/: config.toml  injections.scm
languages/comment/: config.toml  highlights.scm
languages/cpp-injections/: config.toml
languages/elixir-injections/: config.toml  injections.scm
languages/go-injections/: config.toml
languages/haskell-injections/: config.toml
languages/java-injections/: config.toml
languages/javascript-injections/: config.toml
languages/json5-injections/: config.toml
languages/kotlin-injections/: config.toml  injections.scm
languages/php-injections/: config.toml
languages/python-injections/: config.toml
scripts/: add-language-support.sh  build.sh  dev.sh  performance-test.sh  release.sh  submit-to-zed.sh  test.sh  validate.sh
src/: cache.rs  lib.rs  patterns.rs  scanner.rs
tests/: integration.rs
themes/: willow-dark.json  willow-light.json
tree-sitter-todo-injections/: grammar.js  package.json
(+20 files in other folders)
